--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build --aot --prod",
+    
   },
+  "author": "",
+  "license": "ISC",
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
@@ -29,7 +32,11 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "body-parser": "~1.2.2",
+    "request": "~2.36.0",
+    "ejs": "~1.0.0",
+    "crypto-js": "^3.1.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
